# llm-wiki

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-database-indexes-search-hardening/: CONTEXT.md  PLAN.md
.planning/phases/01-file-parsing/: PLAN.md
.planning/phases/01-open-api/: PLAN.md
.planning/phases/02-lint-worker-implementation/: PLAN.md
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  003_platform_admin_flag.py  004_block_enrichment_columns.py
api/: Dockerfile  Dockerfile.worker  drizzle.config.ts  package.json  tsconfig.json
api/drizzle/: 0000_glossy_mandroid.sql  0001_add_search_indexes.sql  0002_embedding_migration_support.sql
api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
api/src/: server.ts  worker.ts
api/src/ingest/: build-wiki-job.ts  chunker.ts  embedding-migrate-job.ts  extract-job.ts  file-parser.ts  (+1 more)
charts/llm-wiki/: Chart.yaml  values.yaml
db/migrations/: 001_vnext_schema.sql  002_relation_unique_index.sql  003_workspace_api_config.sql
docker/postgres/: Dockerfile
grafana/: llm-wiki-dashboard.json
scripts/: check_local_stack.py  dev_stack.py  init_local_db.py  run_local_checks.sh
services/: __init__.py
services/compiler_worker/: Dockerfile  __init__.py
services/converter_service/: Dockerfile  __init__.py
services/mcp_service/: Dockerfile  __init__.py
services/platform_api/: Dockerfile
tests/: conftest.py
tests/integration/: test_api.py  test_auth_security.py  test_converter_e2e.py  test_mcp_e2e.py  test_revision_diff_api.py  test_upload_security.py  test_upload_source_route.py  test_worker_e2e.py
tests/unit/: test_crypto.py  test_diffing.py  test_markdown_ops.py  test_parsing.py  test_queue.py  test_relation_provenance.py
web/: Dockerfile  index.html  middleware.ts  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.js.map  vite.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: graph-canvas.tsx  graph-page-client.tsx  graph-panel.tsx  login-form.tsx  markdown-content.tsx  page-frame.tsx  run-status-list.tsx  settings-panel.tsx  shell.tsx  source-upload-form.tsx  source-workspace-panel.tsx  vault-browser.tsx  vault-document-inspector.tsx
web/i18n/: request.ts
web/lib/: api.ts  i18n.ts
web/messages/: en.json  zh.json
web/src/: App.tsx  index.css
(+158 files in other folders)
